fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -361,6 +361,9 @@
     padding-left: 10px;
 
 }
+.card iframe{
+  max-width: 100%;
+}
 .clock img{
     display: inline-block;
     padding: 0;
@@ -477,13 +480,15 @@
 @media screen and (max-width: 576px) {
  body{
     margin: 0;
+    padding: 0;
     max-width: 100%;
     overflow-x: hidden;
+    
  }
 
   /* ---------- navbar ---------- */
   .nav-upperContent{
-    padding: 0.8rem 1rem;
+    padding: 0.8rem 0.8rem;
     align-items: center;
   }
   .Title{
@@ -502,6 +507,18 @@
   padding: 0;
   margin: 0;
   }
+  .banner-c p{
+    text-align: center;
+    font-size: small;
+    padding: 20px
+  }
+  .banner1-btn
+  {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+  }
 
   /* ---------- banner1 (hero) ---------- */
   .banner1{
@@ -517,8 +534,9 @@
     width: 500px;
   }
   .hero-circle-microphone{
+    width: 10%;
 
-    width: 2px;
+   
   }
 
   .banner-content .banner1-btn{
@@ -622,12 +640,12 @@
     padding-left: 5.5em;
   }
   .host-png{
-    padding-left: 5.5em;
+    padding-left: 100px;
     
   }
 
   .info-links {
-    padding-left: 5.5em;
+    padding-left: 80px;
   }
 
   /* ---------- footer ---------- */
@@ -648,4 +666,16 @@
     padding-right: 5em;
     gap : 5px;
   }
+  html, body{
+    width: 100%;
+    overflow-x: hidden;  
+  }
+
+  .hero-circle{
+    width: 500px;
+    max-width: 600px;         
+    margin-left: auto;
+    margin-right: auto;
+  }
+
 }
